manifests/deployment-1.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "akscluster-bd5d"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "akscluster-bd5d"
  template:
    metadata:
      labels:
        app: "akscluster-bd5d"
    spec:
      containers:
        - name: "akscluster-bd5d"
          image: "bigbangcontainerlowercase.azurecr.io/akscluster"
          ports:
          - containerPort: 80
