manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: "akscluster-90cc"
spec:
  replicas: 2
  selector:
    matchLabels:
      app: "akscluster-90cc"
  template:
    metadata:
      labels:
        app: "akscluster-90cc"
    spec:
      containers:
        - name: "akscluster-90cc"
          image: "bigbangcontainer.azurecr.io/akscluster"
          ports:
          - containerPort: 80
