manifests/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: "akscluster-90cc"
    labels:
        app: "akscluster-90cc"
    annotations:
        kubernetes.io/ingress.class: addon-http-application-routing
spec:
    rules:
        - host: aks-cluster93db-akscluster-90cc.28adbafaf9734f8ab731.eastus.aksapp.io
          http:
            paths:
            - path: /
              backend:
                serviceName: "akscluster-90cc"
                servicePort: 80
